--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "style-loader": "^1.0.0",
     "webpack": "4.39.3",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "3.8.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
   },
-  "description": ""
+  "description": "Smita"
 }
